--- a/electron-admin/package.json
+++ b/electron-admin/package.json
@@ -2,7 +2,7 @@
   "name": "electron-admin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "electron ."
   },
